# chrs

./: .editorconfig  .gitignore  Cargo.toml  README.md  cheatsheet.sh  flake.nix
.github/workflows/: release.yml  test-chris.yml  test-chrs.yml  test.yml
chris/: Cargo.toml  README.md
chris/src/: account.rs  api.rs  auth.rs  base.rs  client.rs  common_types.rs  constants.rs  errors.rs  lib.rs  models.rs  pagination.rs  pipeline.rs  pipelines.rs  requests.rs  reqwest.rs  search.rs  types.rs
chris/src/client/: access.rs  anon.rs  authed.rs  base.rs  cube.rs  either.rs  errors.rs  feed.rs  filebrowser.rs  pipeline.rs  plugin.rs  plugininstance.rs  search.rs  searches.rs  variant.rs
chris/src/models/: active.rs  auth_types.rs  connected.rs  data.rs  enums.rs  file.rs  linked.rs  live.rs  types.rs
chris/src/models/active/: downloadable.rs  plugin.rs
chris/src/models/live/: downloadable.rs  feed.rs  pipeline.rs  plugin.rs  plugininstance.rs
chris/src/pipeline/: canon.rs  rfc2.rs
chris/src/search/: builder.rs  query.rs  search.rs  searches.rs
chris/src/types/: cube_url.rs  enums.rs  ids.rs  strings.rs  urls.rs
chris/tests/: test_client.rs  test_logged_in.rs  test_public.rs
chris/tests/data/pipelines/: fetal_brain_mri_surface_extraction_pipeline.converted.expanded.json  fetal_brain_mri_surface_extraction_pipeline.yml  fetal_brain_reconstruction_canon.json  fetal_brain_reconstruction_expanded.json
chris/tests/data/sample_files/a_folder/: pikachu_testpass.txt
chris/tests/helpers/: mod.rs
chrmnt/: Cargo.toml
chrmnt/src/: main.rs
chrs/: Cargo.toml  README.md  pyproject.toml
chrs/old/: descent.rs  pipeline_add.rs  plugin.rs
chrs/old/files/: download.rs  list_files.rs
chrs/src/: aprogress.rs  arg.rs  cd.rs  chris.rs  client.rs  config.rs  constants.rs  credentials.rs  describe.rs  download.rs  error_messages.rs  executor.rs  feeds.rs  file_transfer.rs  files.rs  files_tree.rs  get.rs  get_client.rs  info.rs  io_helper.rs  list.rs  login.rs  logs.rs  ls.rs  main.rs  pipeline_add.rs  plugin.rs  plugin_clap.rs  progress.rs  run.rs  search.rs  shlex.rs  status.rs  unicode.rs  upload.rs  whoami.rs
chrs/src/arg/: feed_or_plugin_instance.rs  given_data_node.rs  given_path.rs  given_plugin_instance.rs  runnable.rs  runnable_parser.rs  thing.rs
chrs/src/file_transfer/: bytes_bar.rs  error.rs  multi_progress.rs
chrs/src/files/: channel.rs  decoder.rs  download.rs  fname_util.rs  human_paths.rs  list_files.rs  ls.rs  tree.rs
chrs/src/login/: cd.rs  cmd.rs  config.rs  get_client.rs  helpers.rs  prompt.rs  saved.rs  state.rs  store.rs  switch.rs  tokenstore.rs  ui.rs
chrs/src/ls/: cmd.rs  coder_channel.rs  config.rs  options.rs  plain.rs  tree.rs
chrs/src/progress/: bytes_bar.rs
chrs/src/status/: branch.rs  cmd.rs  feed.rs  find_branch.rs  print_branch.rs
chrs/test_data/: cube_chrisproject_org_feed_45_plugininstances_results.json
chrust/: Cargo.toml
chrust/src/: auth.rs  base.rs  lib.rs
src/: chris.rs  main.rs  upload.rs
