[package]
name = "chrs"
version = "0.0.2"

edition = "2021"

readme = "README.md"
description = "CLI ChRIS client"
repository = "https://github.com/FNNDSC/chrs"
license = "MIT"
categories = ["command-line-utilities", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
reqwest = { version = "0.11.9", features = ["blocking", "json", "multipart"] }
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"
