[package]
name = "chris"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "ChRIS client library"
readme = "README.md"
repository = "https://github.com/FNNDSC/chrs"
license = "MIT"
categories = ["web-programming::http-client", "science"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json", "multipart", "stream"] }
serde_urlencoded = "0.7.1"
thiserror = "1.0.30"
console = "0.15.0"
aliri_braid = "0.2.4"
shrinkwraprs = "0.3.0"
serde_json = "1.0.79"
futures = "0.3.21"
async-stream = "0.3.3"
tokio-util = { version = "0.7.1", features = [ "io" ] }
tokio = { version = "1.17.0", features = ["full"] }
itertools = "0.10.3"
lazy_static = "1.4.0"

# OpenSSL workaround, see features section
openssl = { version = "0.10", optional = true }
trust-dns-resolver = "0.21"

[dev-dependencies]
serde_json = "1.0.79"
serde_yaml = "0.8.23"
names = { version = "0.14.0", default-features = false }
rstest = "0.15.0"
tokio-test = "0.4.2"
async-std = { version = "1.11.0", features = ["attributes"] }
tempfile = "3.3.0"

# https://github.com/cross-rs/cross/issues/229#issuecomment-597898074
[features]
default = ["reqwest/default-tls", "trust-dns-resolver/dns-over-native-tls"]
vendored-openssl = ["openssl/vendored"]
rustls = ["reqwest/rustls-tls", "trust-dns-resolver/dns-over-rustls"]
