[package]
name = "chris"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "ChRIS client library"
readme = "README.md"
repository = "https://github.com/FNNDSC/chrs"
license = "MIT"
categories = ["web-programming::http-client", "science"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json", "multipart", "stream"], default-features = false }
serde_urlencoded = "0.7.1"
thiserror = "1.0.30"
console = "0.15.0"
serde_json = "1.0.79"
futures = "0.3.21"
async-stream = "0.3.3"
tokio-util = { version = "0.7.1", features = [ "io" ] }
tokio = { version = "1.17.0", features = ["full"] }
itertools = "0.10.3"
bytes = "1.2.0"
fs-err = { version = "2.9.0", features = ["tokio"] }

# OpenSSL workaround, see features section
openssl = { version = "0.10", optional = true }
trust-dns-resolver = "0.22.0"
serde_with = { version = "2.1.0", features = ["json"] }
aliri_braid = "0.4.0"
shrinkwraprs = "0.3.0"
camino = "1.1.6"
reqwest-middleware = "0.2.4"
anyhow = "1.0.80"
async-trait = "0.1.77"

[dev-dependencies]
serde_json = "1.0.79"
serde_yaml = "0.9.16"
names = { version = "0.14.0", default-features = false }
rstest = "0.16.0"
tokio-test = "0.4.2"
async-std = { version = "1.11.0", features = ["attributes"] }
tempfile = "3.3.0"
futures = { version = "0.3.21", features = [ "executor" ] }
macro_rules_attribute = "0.1.3"
pathdiff = "0.2.1"


# https://github.com/cross-rs/cross/issues/229#issuecomment-597898074
[features]
default = ["reqwest/default-tls", "trust-dns-resolver/dns-over-native-tls"]
vendored-openssl = ["openssl/vendored"]
rustls = ["reqwest/rustls-tls", "trust-dns-resolver/dns-over-rustls"]
