[package]
name = "chrmnt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chris = { path = "../chris", version = "0.4.0", features = ["rustls"], default-features = false }
clap = { version = "4.1.6", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1.0.69"
#fuse_mt = "0.6.0"
fuser = "0.12.0"
