[package]
name = "chrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json", "multipart"] }
tokio = { version = "1.17.0", features = ["full"] }
thiserror = "1.0.30"
derive_more = "0.99.17"
console = "0.15.0"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.79"
names = { version = "0.13.0", default-features = false }
